# SITCON-Camp-2025-Group5

./: app.py  index.html  pyproject.toml  test.py  tool.json
123/: Page1.html  Page2.html  Page3.css  Page3.html  Page4-loding page.css  Page4-loding page.html  Page6-Get item.html  Page7.html  index.html  page5-outcome.html  page6-Get Item.html
123/data/: tool.json
backend/: app.py  pyproject.toml
data/: tool.json
frontend/: Page2.html  Page3.html  Page4-loding page.html  Page5-Get item.html  Page6-outcome.html  index.html
frontend/data/: tool.json
